--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -1,3 +1,23 @@
 .homeContainer {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.verticle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.SampleCard {
+  width: 215px;
+  height: 323px;
+  margin: 10px;
+  background: #ffffff;
+  border: 1px solid #e4e4e4;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
